--- a/assets/style.css
+++ b/assets/style.css
@@ -244,6 +244,12 @@ input[type="submit"] {
 	padding: .5em 1em
 }
 
+.centered {
+	display:flex;
+	justify-content: center;
+	padding-top: 1em;
+}
+
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
